Added NuGet examples in order to make testing easier of the NuGet packages.
Splitted integration tests into fast and long running test suites.

--- a/Source/Digst.OioIdws.Wsp/Release instructions.html
+++ b/Source/Digst.OioIdws.Wsp/Release instructions.html
@@ -26,7 +26,7 @@
 
     <ul>
         <li>Change the release note in the .nuspec file</li>
-        <li>Pack the Digst.OioIdws.Wsc project: <code>nuget pack Digst.OioIdws.Wsc.csproj -Symbols -Properties Configuration=Release</code></li>
+        <li>Pack the Digst.OioIdws.Wsc project: <code>nuget pack Digst.OioIdws.Wsp.csproj -Symbols -Properties Configuration=Release</code></li>
         <li>Push the package: <code>nuget push <i>pakkenavn</i></code></li>
     </ul>
 
