--- a/Source/Digst.OioIdws.Wsc/Release instructions.html
+++ b/Source/Digst.OioIdws.Wsc/Release instructions.html
@@ -26,7 +26,7 @@
 
     <ul>
         <li>Change the release note in the .nuspec file</li>
-        <li>Pack the Digst.OioIdws.Wsc project: <code>nuget pack Digst.OioIdws.Wsc.csproj -Symbols -Properties Configuration=Release</code></li>
+        <li>Pack the Digst.OioIdws.Wsc project: <code>nuget pack Digst.OioIdws.Wsc.csproj -Symbols -Properties Configuration=Release -IncludeReferencedProjects</code></li>
         <li>Push the package: <code>nuget push Digst.OioIdws.Wsc.X.X.X.nupkg -Source nuget.org -ApiKey XXX</code></li>
     </ul>
 
